--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.main.external</groupId>
+            <artifactId>bean-validator</artifactId>
+            <version>5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
