--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.profiles.active=local
 spring.thymeleaf.cache=false
 #servers.servlet.session.timeout=30m
+
+#??? ??? create-drop ?? update? ???? ?? ????? validate? ?????.
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#??? SQL ??? ?? ?? ??? ?? SQL? ????? ??
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
